2006-05-02  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-from-style, message-signature-separator)
	(message-user-organization-file, message-send-mail-function)
	(message-citation-line-function, message-yank-prefix)
	(message-indent-citation-function, message-signature)
	(message-signature-file, message-signature-insert-empty-line):
	Remove autoloads.

	* gnus-art.el (gnus-buttonized-mime-types): Remove
	"multipart/signed".  Revert 2006-04-26 change.

2006-05-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-version-number): Bump version.

2006-05-01 Lars Magne Ingebrigtsen <lars@ingebrigtsen.no>

	* gnus.el: No Gnus v0.5 is released.

2006-04-30  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* nnweb.el (nnweb-request-article): Do proper xwfu encoding when
	fetching articles by message-id.

2006-04-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (hashcash): Require hashcash as normal.

	* ecomplete.el (ecomplete-highlight-match-line): Use
	point-at-eol.
	(ecomplete-highlight-match-line): Use `highlight', because that
	face exists in both Emacs and XEmacs.

	* message.el (message-display-abbrev): Use point-at-bol.

	* mail-source.el: Don't require timer/timer-funcs.

	* gnus-async.el: Ditto.

	* password.el: Ditto.

	* nnheaderxm.el (nnheader-cancel-timer): Ditto.

	* mm-url.el: Ditto.

	* gnus-xmas.el: Don't require timer-funcs.

	* mm-util.el: Require timer/timer-funcs.

2006-04-23  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* mm-url.el (mm-url-insert-file-contents): Don't set Connection:
	Close.

2006-04-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-uu.el (mm-uu-pgp-encrypted-extract-1): Assume buffer is made
	unibyte after clear-decrypt function runs.

	* mml2015.el (mml2015-pgg-clear-decrypt): Treat data which pgg
	returns as a unibyte string.

2006-04-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Revert.

	* pgg-gpg.el (pgg-string-to-multibyte): Remove.
	(pgg-gpg-process-sentinel): Revert.
