@@ -1,3 +1,11 @@
+2006-05-03  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* gnus-art.el (gnus-mime-view-part-as-type): Add optional PRED
+	argument.
+	(gnus-mime-view-part-externally, gnus-mime-view-part-internally):
+	Try harder to show the attachment internally or externally using
+	gnus-mime-view-part-as-type.
+
 2006-05-02  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* message.el (message-from-style, message-signature-separator)
